# crazyfly

./: README.md  main.py  pyproject.toml
crazyfly/: ui_extension_example.py
crazyfly/config/: extension.toml
crazyfly/crazyfly/tasks/manager_based/crazyfly/: __init__.py
crazyfly/crazyfly/tasks/manager_based/crazyfly/mdp/: actions (old).py  rewards.py
crazyfly/docs/: CHANGELOG.rst
crazyfly/policy/: ppo.py  trpo.py
crazyfly/policy/layers/: ac_networks.py  base.py  building_blocks.py
crazyfly/tasks/: __init__.py
crazyfly/tasks/manager_based/crazyfly/: __init__.py
crazyfly/tasks/manager_based/crazyfly/agents/: sb3_ppo_cfg.yaml
crazyfly/tasks/manager_based/crazyfly/mdp/: actions (RL-friendly roror).py  actions.py  terminations.py
crazyfly/utils/: setup_logger.py  utils.py
misc/: nohup.out
policy/: __init__.py  uniform_random.py
scripts/: list_envs.py  main.py  random_agent.py  zero_agent.py
scripts/sb3/: play.py  train.py
source/crazyfly/: setup.py
source/crazyfly/crazyfly/tasks/manager_based/crazyfly/: __init__.py  crazyfly_env_cfg.py
source/crazyfly/crazyfly/tasks/manager_based/crazyfly/mdp/: actions (RL-friendly roror).py  observations.py
utils/: algorithms.py  get_args.py  rl.py
