[project]
name = "crazyfly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "gymnasium>=1.2.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "isaacsim[all,extscache]>=5.1.0",
    "isaaclab[all,isaacsim]>=2.3.2.post1",
    "omniverse-kit>=107.3.7.285824",
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
license = "Apache-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["crazyfly"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
isaacsim = [{ index = "nvidia-pypi" }]
isaaclab = [{ index = "nvidia-pypi" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux'",
] # https://docs.astral.sh/uv/concepts/projects/config/#limited-resolution-environments
override-dependencies = ["pywin32==306; sys_platform == 'win32'"]
